--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
   flutter_staggered_animations: ^1.1.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
