--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_staggered_animations: ^1.1.1
   url_launcher: ^6.3.0
+  flutter_cache_manager: ^3.3.2
 
 dev_dependencies:
   flutter_test:
